Fixed background image cropping

--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: url(img.jpg)
+    background-image: url(img.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .wrapper {
